<resources>
    <string name="app_name">Battleship Layout</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="user_gridImageView">user grid</string>
    <string name="opponent_gridImageAsset2">opponent_gridImageAsset2</string>
    <string name="energy_level_of_shipsImageAsset3">energy level of ships</string>
    <string name="title">BATTLESHIP</string>
    <string name="hitMessage">Hit!</string>
    <string name="restart">Restart</string>
    <string name="quit">Quit</string>
    <string name="mute">Mute</string>
</resources>
