<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    android:paddingBottom="0dp" tools:context=".MainActivity"
    android:padding="0dp"
    android:paddingEnd="0dp"
    android:paddingStart="0dp"
    android:background="#ff6b6b6b"
    android:transitionGroup="true"
    android:id="@+id/OverallLayout">

    <ImageView
        android:layout_width="500dp"
        android:layout_height="360dp"
        android:id="@+id/playerGrid"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:src="@mipmap/player_grid"
        android:contentDescription="@string/user_gridImageView"
        android:clickable="true"
        android:layout_alignParentEnd="false"
        android:scaleType="fitXY" />

    <ImageView
        android:layout_width="500dp"
        android:layout_height="360dp"
        android:id="@+id/opponentGrid"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:src="@mipmap/opponent_grid"
        android:scaleType="fitXY"
        android:contentDescription="@string/opponent_gridImageAsset2" />

    <ImageView
        android:layout_width="275dp"
        android:layout_height="360dp"
        android:id="@+id/energyLevels"
        android:src="@mipmap/energy_levels"
        android:scaleType="fitXY"
        android:contentDescription="@string/energy_level_of_shipsImageAsset3"
        android:layout_above="@+id/playerGrid"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:id="@+id/title"
        android:textColor="#ffc0c0c0"
        android:textSize="80sp"
        android:layout_alignTop="@+id/energyLevels"
        android:layout_centerHorizontal="true"
        android:background="#ff1b1b67" />

    <TextView
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:text="   Hit!"
        android:id="@+id/hitMessage"
        android:textColor="#ffff0e09"
        android:textSize="60dp"
        android:layout_above="@+id/opponentGrid"
        android:layout_centerHorizontal="true"
        android:background="#ff010101" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/title"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/ButtonLayout">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restart"
            android:id="@+id/restart"
            android:textSize="20sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quit"
            android:id="@+id/quit"
            android:textSize="20sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mute"
            android:id="@+id/mute"
            android:textSize="20sp" />
    </LinearLayout>

</RelativeLayout>
